@@ -9038,10 +9038,9 @@ Unsetting
 .BR OPTIND ,
 .BR RANDOM ,
 .BR SECONDS ,
-.BR TMOUT ,
 and
 .SM
-.B _
+.B TMOUT
 removes their special meaning even if they are
 subsequently assigned to.
 .TP
